--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="hero">
       <div data-aos="fade-up">
         <h1>Cheolmin Shin</h1>
-        <p>Ph.D student at Seoul National University · Quant finance / PDE & Monte Carlo</p>
+        <p>Ph.D student at Seoul National University · Quantitative finance / PDE & Monte Carlo</p>
         <a class="btn" href="#research">See Research</a>
         <a class="btn" href="https://github.com/cheolminshin" target="_blank">GitHub</a>
       </div>
@@ -45,7 +45,9 @@
 
     <section id="about" data-aos="fade-up">
       <h2>About</h2>
-      <p>간단한 소개…</p>
+      <p>Hello! I'm a Ph.D student at the Department of Mathematical Sciences in Seoul National University.</p>
+      <p>I am broadly interested in mathematical finance and stochastic processes.</p>
+      <p>I am a member of <a href="https://sites.google.com/view/snuprob"target="_blank">SNU Probability</a>.</p>
     </section>
 
     <section id="research" data-aos="fade-up">
@@ -57,9 +59,9 @@
     </section>
 
     <section id="projects" data-aos="fade-up">
-      <h2>Projects</h2>
+      <h2>Talks</h2>
       <ul>
-        <li><a href="#">Bond pricing FDM/MC comparison</a></li>
+        <li></li>
       </ul>
     </section>
   </main>
@@ -68,3 +70,4 @@
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
