--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
       <p>Hello! I'm a Ph.D student at the Department of Mathematical Sciences in Seoul National University.</p>
       <p>I am broadly interested in mathematical finance and stochastic processes.</p>
       <p>I am a member of <a href="https://sites.google.com/view/snuprob"target="_blank">SNU Probability</a>.</p>
+      <p></p>
+      <p><b>[E-mail]</b> cheolmin.shin@snu.ac.kr</p>
+    </section>
+
+    <section id="education" data-aos="fade-up">
+      <h2>Education</h2>
+      <ul>
+        <li>Department of Mathematical Sciences, Seoul National University (2020.3~), Advisor: <a href="https://sites.google.com/view/hyungbin2024"target="_blank">Hyungbin Park</a></li>
+        <li>Department of Economics, Kyunghee University (2013.3-2020.2); B.A. in Economics</li>
+        <li>Department of Mathematics, Kyunghee University (2014.9-2020.2); B.S. in Mathematics</li>
+      </ul>
     </section>
 
     <section id="research" data-aos="fade-up">
@@ -70,4 +81,5 @@
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
