--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h2>Research</h2>
       <ul>
         <li>Sticky short-rate with jumps — working paper</li>
-        <li>Eigenfunction expansions — notes / slides</li>
+        <li>Jaehyun Kim, Cheolmin Shin, Hyungbin Park - Asymptotic pricing of short maturity near-the-money options in stochastic volatility models. Financial Research Letters (2026)</li>
       </ul>
     </section>
 
@@ -81,6 +81,7 @@
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
