--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
     <section id="research" data-aos="fade-up">
       <h2>Research</h2>
       <ul>
-        <li>Sticky short-rate with jumps — working paper</li>
-        <li>Jaehyun Kim, Cheolmin Shin, Hyungbin Park - Asymptotic pricing of short maturity near-the-money options in stochastic volatility models. Financial Research Letters (2026)</li>
+        <li>Sticky FED put short-rate with jumps — working paper</li>
       </ul>
     </section>
 
@@ -170,6 +169,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
