--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <header>
+  <!-- <header>
     <div class="container">
       <nav>
         <a href="#about">About</a>
@@ -28,7 +28,7 @@
         <a href="cv/index.html">CV</a>
       </nav>
     </div>
-  </header>
+  </header> -->
 
   <main class="container">
     <section class="hero">
@@ -169,6 +169,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
