--- a/index.html
+++ b/index.html
@@ -70,11 +70,6 @@
 
     <h2>Publications</h2>
 <div id="pubs"></div>
-    
-<section id="publications" data-aos="fade-up">
-  <h2>Publications</h2>
-  <div id="pubs"></div>
-</section>
 
 <style>
   .pub-item { margin-bottom: 14px; }
@@ -164,11 +159,21 @@ renderPubs();
       </ul>
     </section>
   </main>
+  
+  <section id="Program" data-aos="fade-up">
+    <h2>Skills and Languages</h2>
+    <ul>
+      <li><b>Computer Skills: </b>C++, Python</li>
+      <li><b>Languages: </b>Korean(native), English(fluent), Japanese(fluent)</li>
+    </ul>
+    <!-- <div id="pubs"></div> -->
+  </section>
 
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
