--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a class="btn" href="https://github.com/cheolminshin" target="_blank">GitHub</a>
       </div>
       <div data-aos="zoom-in" style="text-align:center">
-        <img src="assets/img/profile.jpg" alt="profile" class="round"/>
+        <img src="profile.jpeg" alt="profile" class="round"/>
       </div>
     </section>
 
@@ -174,6 +174,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
