--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
       <h2>About</h2>
       <p>Hello! I'm a Ph.D student at the Department of Mathematical Sciences in Seoul National University.</p>
       <p>I am broadly interested in mathematical finance and stochastic processes.</p>
-      <p>I am a member of <a href="https://sites.google.com/view/snuprob"target="_blank">SNU Probability</a>.</p>
       <p></p>
       <p><b>[E-mail]</b> cheolmin.shin@snu.ac.kr</p>
     </section>
@@ -158,6 +157,34 @@ renderPubs();
         <li><a href="https://aqfc2025.phbs.pku.edu.cn/"target="_blank">The 9th Asian Quantitative Finance Conference(AQFC)</a>, PHBS, Shenzhen, China (April 26-28, 2025)</li>
       </ul>
     </section>
+    <section id="Scholarship" data-aos="fade-up">
+      <h2>Scholarship</h2>
+      <ul>
+        <li><strong>BK21 four scholarship</strong><br>
+          <p class="desc">
+            Seoul National University/National Research Foundation of Korea<br>
+            KRW 4,200,000 per semester (Sep 2020 - Feb 2021)<br>
+            KRW 30,000,000 per year (Mar 2023 - Feb 2026)
+          </p></li>
+      </ul>
+    </section>
+    <section id="Experience" data-aos="fade-up">
+      <h2>Experience</h2>
+      <ul>
+        <li><strong>General Assistant at the Department of Mathematical Sciences at SNU (TA Office/Manager TA)</strong><br>
+          <p class="desc">
+            Department of Mathematical Sciences at Seoul National University (Apr 2021- Feb 2023)<br>
+            Assistance for the entire assignment of assistants and operation of liberal mathematics
+          </p></li>
+        <li><Strong>Teaching Assistant</Strong>
+        <p class="desc">
+          Calculus Practice 2 (Sep 2020 - Feb 2021, Best TA Award)<br>
+          Differential Equation (Jul 2023 - Aug 2023)<br>
+          Engineering Mathematics 1 (Sep 2023 - Feb 2024)<br>
+          Engineering Mathematics 2 (Mar 2024 - Jun 2024)
+        </p></li>
+      </ul>
+    </section>
     <section id="Program" data-aos="fade-up">
       <h2>Skills and Languages</h2>
       <ul>
@@ -174,6 +201,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
