--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <section id="education" data-aos="fade-up">
       <h2>Education</h2>
       <ul>
-        <li>Department of Mathematical Sciences, Seoul National University (2020.3~), Advisor: <a href="https://sites.google.com/view/hyungbin2024"target="_blank">Hyungbin Park</a></li>
-        <li>Department of Economics, Kyunghee University (2013.3-2020.2); B.A. in Economics</li>
-        <li>Department of Mathematics, Kyunghee University (2014.9-2020.2); B.S. in Mathematics</li>
+        <li>Department of Mathematical Sciences, Seoul National University (Mar 2020 - Present), Advisor: <a href="https://sites.google.com/view/hyungbin2024"target="_blank">Hyungbin Park</a></li>
+        <li>Department of Economics, Kyunghee University (Mar 2013 - Feb 2020); B.A. in Economics</li>
+        <li>Department of Mathematics, Kyunghee University (Sep 2014 - Feb 2020); B.S. in Mathematics</li>
       </ul>
     </section>
 
@@ -193,6 +193,14 @@ renderPubs();
       </ul>
     <!-- <div id="pubs"></div> -->
     </section>
+    <section id="Conference" data-aos="fade-up">
+      <h2>Conferences Attended</h2>
+      <!-- <ul>
+        <li><b>Computer Skills: </b>C++, Python</li>
+        <li><b>Languages: </b>Korean(native), English(fluent), Japanese(fluent)</li>
+      </ul> -->
+    <!-- <div id="pubs"></div> -->
+    </section>
   </main>
   
 
@@ -201,6 +209,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
