--- a/index.html
+++ b/index.html
@@ -195,11 +195,12 @@ renderPubs();
     </section>
     <section id="Conference" data-aos="fade-up">
       <h2>Conferences Attended</h2>
-      <!-- <ul>
-        <li><b>Computer Skills: </b>C++, Python</li>
-        <li><b>Languages: </b>Korean(native), English(fluent), Japanese(fluent)</li>
-      </ul> -->
-    <!-- <div id="pubs"></div> -->
+      <ul>
+        <li><a href="https://sites.google.com/view/2025-workshop-mf-seoul" target="_blank">Workshop on Mathematical Finance at Seoul</a>, May, 24-28, 2025, Seoul National University, Seoul, Korea</li>
+        <li><a href="https://aqfc2025.phbs.pku.edu.cn/"target="_blank">The 9th Asian Quantitative Finance Conference(AQFC)</a>,April 26-28, 2025, PHBS, Shenzhen, China</li>
+        <li><a href="https://www.siam.org/conferences-events/past-event-archive/fm23/" target="_blank">SIAM Conference on Financial Mathematics and Engineering (FM23)</a>, June 6–9 , 2023, DoubleTree by Hilton Hotel, Philadelphia, Pennsylvania, US</li>
+        <li><a href="https://sites.google.com/view/seoul-london-workshop-2022/" target="_blank">1st Seoul-London Workshop on Mathematical Finance</a>, September, 17-18, 2022, Seoul National University, Seoul, Korea</li>
+      </ul>
     </section>
   </main>
   
@@ -209,6 +210,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
