--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div data-aos="fade-up">
         <h1>Cheolmin Shin</h1>
         <p>Ph.D student at Seoul National University · Quantitative finance / PDE & Monte Carlo</p>
-        <a class="btn" href="#research">See Research</a>
+        <a class="btn" href="https://orcid.org/0009-0004-2986-5881">ORCID</a>
         <a class="btn" href="https://github.com/cheolminshin" target="_blank">GitHub</a>
       </div>
       <div data-aos="zoom-in" style="text-align:center">
@@ -210,6 +210,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
