--- a/index.html
+++ b/index.html
@@ -171,17 +171,22 @@ renderPubs();
     <section id="Experience" data-aos="fade-up">
       <h2>Experience</h2>
       <ul>
-        <li><strong>General Assistant at the Department of Mathematical Sciences at SNU (TA Office/Manager TA)</strong><br>
+        <li><strong>General Assistant at the Department of Mathematical Sciences at SNU</strong><br>
           <p class="desc">
-            Department of Mathematical Sciences at Seoul National University (Apr 2021- Feb 2023)<br>
-            Assistance for the entire assignment of assistants and operation of liberal mathematics
+            Manager TA, Department of Mathematical Sciences, Seoul National University (Mar 2022 - Feb 2023)<br>
+            TA office, Department of Mathematical Sciences, Seoul National University (Apr 2021 - Feb 2022) 
           </p></li>
-        <li><Strong>Teaching Assistant</Strong>
+        <li><Strong>Teaching Assistant</Strong> at Seoul National University
         <p class="desc">
-          Calculus Practice 2 (Sep 2020 - Feb 2021, Best TA Award)<br>
-          Differential Equation (Jul 2023 - Aug 2023)<br>
+          Engineering Mathematics 2 (Mar 2024 - Jun 2024)<br>
           Engineering Mathematics 1 (Sep 2023 - Feb 2024)<br>
-          Engineering Mathematics 2 (Mar 2024 - Jun 2024)
+          Differential Equation (Jul 2023 - Aug 2023)<br>
+          Calculus Practice 2 (Sep 2020 - Feb 2021, Best TA Award)
+        </p></li>
+        <li><strong>Teaching Assistant</strong> at Kyunghee University
+        <p class="desc">
+          Mathematics for Economics (Mar 2018 - Feb 2020)<br>
+          Statistics for Economics (Mar 2018 - Jun 2018)
         </p></li>
       </ul>
     </section>
@@ -210,6 +215,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
