--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ renderPubs();
           Engineering Mathematics 2 (Mar 2024 - Jun 2024)<br>
           Engineering Mathematics 1 (Sep 2023 - Feb 2024)<br>
           Differential Equation (Jul 2023 - Aug 2023)<br>
-          Calculus Practice 2 (Sep 2020 - Feb 2021, Best TA Award)
+          Calculus Practice 2 (Sep 2020 - Feb 2021, Excellent TA Award)
         </p></li>
         <li><strong>Teaching Assistant</strong> at Kyunghee University
         <p class="desc">
@@ -215,6 +215,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
