--- a/index.html
+++ b/index.html
@@ -190,6 +190,16 @@ renderPubs();
         </p></li>
       </ul>
     </section>
+    <section id="Award" data-aos="fade-up">
+      <h2>Award & Honor</h2>
+      <ul>
+        <li><strong>Honorable Mention (one of five teams), <a href="https://www.dbifc.co.kr/awards/2018" target="_blank">DB Insurance & Finance Contest</a> (2018)</strong><br>
+          <p class="desc">
+            Awarded KRW 1.5 million and selected for an Asian Global Finance Study Tour (Hong Kong)<br>
+            Project: Evaluating Excess Returns of P2P Bonds: CDS Premium Estimation for Amortizing Bonds Using Default Probability Models
+          </p></li>
+      </ul>
+    </section>
     <section id="Program" data-aos="fade-up">
       <h2>Skills and Languages</h2>
       <ul>
@@ -215,6 +225,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
