--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ renderPubs();
       <ul>
         <li><strong>Honorable Mention (one of five teams), <a href="https://www.dbifc.co.kr/awards/2018" target="_blank">DB Insurance & Finance Contest</a> (2018)</strong><br>
           <p class="desc">
-            Awarded KRW 1.5 million and selected for an Asian Global Finance Study Tour (Hong Kong)<br>
+            Awarded KRW 1.5 million and selected for <li><a href="https://www.dbifc.co.kr/tour/asia_8th"target="_blank">an Asian Global Finance Study Tour (Hong Kong)</a><br>
             Project: Evaluating Excess Returns of P2P Bonds: CDS Premium Estimation for Amortizing Bonds Using Default Probability Models
           </p></li>
       </ul>
@@ -225,6 +225,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
