--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ renderPubs();
     <section id="Award" data-aos="fade-up">
       <h2>Award & Honor</h2>
       <ul>
+        <li><strong>Bronze Award, Korean Mathematical Society Undergraduate Mathematics Competition (2019)</strong></li>
         <li><strong>Honorable Mention (one of five teams), <a href="https://www.dbifc.co.kr/awards/2018" target="_blank">DB Insurance & Finance Contest</a> (2018)</strong><br>
           <p class="desc">
             Awarded KRW 1.5 million and selected for <li><a href="https://www.dbifc.co.kr/tour/asia_8th"target="_blank">an Asian Global Finance Study Tour (Hong Kong)</a><br>
@@ -225,6 +226,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
