--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@ renderPubs();
     <section id="Award" data-aos="fade-up">
       <h2>Award & Honor</h2>
       <ul>
+        <li><strong><a href="https://www.math.snu.ac.kr/bbs/board.php?bo_table=Math_Grad_Board&wr_id=141&sca=%EC%9A%B0%EC%88%98TA&year=2026&month=1&day=13" target="_blank">Excellent TA Award</a></strong> at Seoul National University (Feb 2021)<br>
+        <p class="desc">
+            Calculus Practice 2
+          </p></li>
         <li><strong>Bronze Award, Korean Mathematical Society Undergraduate Mathematics Competition (2019)</strong></li>
         <li><strong>Honorable Mention (one of five teams), <a href="https://www.dbifc.co.kr/awards/2018" target="_blank">DB Insurance & Finance Contest</a> (2018)</strong><br>
           <p class="desc">
@@ -226,6 +230,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
