--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@ renderPubs();
       <ul>
         <li><strong><a href="https://www.math.snu.ac.kr/bbs/board.php?bo_table=Math_Grad_Board&wr_id=141&sca=%EC%9A%B0%EC%88%98TA&year=2026&month=1&day=13" target="_blank">Excellent TA Award</a></strong> at Seoul National University (Feb 2021)<br>
         <p class="desc">
-            Calculus Practice 2
+            Calculus Practice 2 (Sep 2020 - Feb 2021)
           </p></li>
-        <li><strong>Bronze Award, Korean Mathematical Society Undergraduate Mathematics Competition (2019)</strong></li>
-        <li><strong>Honorable Mention (one of five teams), <a href="https://www.dbifc.co.kr/awards/2018" target="_blank">DB Insurance & Finance Contest</a> (2018)</strong><br>
+        <li><strong>Bronze Award</strong>, Korean Mathematical Society Undergraduate Mathematics Competition (2019)</li>
+        <li><strong>Honorable Mention</strong> (one of five teams), <a href="https://www.dbifc.co.kr/awards/2018" target="_blank">DB Insurance & Finance Contest</a> (2018)<br>
           <p class="desc">
             Awarded KRW 1.5 million and selected for <a href="https://www.dbifc.co.kr/tour/asia_8th"target="_blank">an Asian Global Finance Study Tour (Hong Kong)</a><br>
             Project: Evaluating Excess Returns of P2P Bonds: CDS Premium Estimation for Amortizing Bonds Using Default Probability Models
@@ -230,6 +230,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
