--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ renderPubs();
         <p class="desc">
             Calculus Practice 2 (Sep 2020 - Feb 2021)
           </p></li>
-        <li><strong>Bronze Award</strong>, Korean Mathematical Society Undergraduate Mathematics Competition (2019)</li>
+        <li><strong>Bronze Award</strong>, <a href="https://www.kms.or.kr/board/list.html?num=14240&start=0&sort=top%20desc,%20reg_dt%20desc&code=conf13&tcode=&key=&keyword=" target="_blank">Korean Mathematical Society Undergraduate Mathematics Competition</a> (2019)</li>
         <li><strong>Honorable Mention</strong> (one of five teams), <a href="https://www.dbifc.co.kr/awards/2018" target="_blank">DB Insurance & Finance Contest</a> (2018)<br>
           <p class="desc">
             Awarded KRW 1.5 million and selected for <a href="https://www.dbifc.co.kr/tour/asia_8th"target="_blank">an Asian Global Finance Study Tour (Hong Kong)</a><br>
@@ -230,6 +230,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
