--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     <section id="research" data-aos="fade-up">
       <h2>Research</h2>
       <ul>
-        <li>Sticky FED put short-rate with jumps — working paper</li>
+        <li>FED Put and Term Structure of interest rates — working paper</li>
+        <li>An Empirical Study of the Hansen–Scheinkman Decomposition under the inverse GARCH model - working paper</li>
+        <li>Numerical method on Two-sided sticky Brownian motion - working paper</li>
       </ul>
     </section>
 
@@ -230,6 +232,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
