--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <h2>Education</h2>
       <ul>
         <li>Department of Mathematical Sciences, Seoul National University (Mar 2020 - Present), Advisor: <a href="https://sites.google.com/view/hyungbin2024"target="_blank">Hyungbin Park</a></li>
-        <li>Department of Economics, Kyunghee University (Mar 2013 - Feb 2020); B.A. in Economics</li>
-        <li>Department of Mathematics, Kyunghee University (Sep 2014 - Feb 2020); B.S. in Mathematics</li>
+        <li>Department of Economics, Kyung Hee University (Mar 2013 - Feb 2020); B.A. in Economics</li>
+        <li>Department of Mathematics, Kyung Hee University (Sep 2014 - Feb 2020); B.S. in Mathematics</li>
       </ul>
     </section>
 
@@ -185,10 +185,14 @@ renderPubs();
           Differential Equation (Jul 2023 - Aug 2023)<br>
           Calculus Practice 2 (Sep 2020 - Feb 2021, Excellent TA Award)
         </p></li>
-        <li><strong>Teaching Assistant</strong> at Kyunghee University
+        <li><strong>Teaching Assistant</strong> at Kyung Hee University
         <p class="desc">
           Mathematics for Economics (Mar 2018 - Feb 2020)<br>
           Statistics for Economics (Mar 2018 - Jun 2018)
+        </p></li>
+        <li><strong>Tutor</strong> at Kyung Hee University
+        <p class="desc">
+          Statistics for Economics (Sep 2017 - Feb 2018, Outstanding Tutor Award)
         </p></li>
       </ul>
     </section>
@@ -205,6 +209,12 @@ renderPubs();
             Awarded KRW 1.5 million and selected for <a href="https://www.dbifc.co.kr/tour/asia_8th"target="_blank">an Asian Global Finance Study Tour (Hong Kong)</a><br>
             Project: Evaluating Excess Returns of P2P Bonds: CDS Premium Estimation for Amortizing Bonds Using Default Probability Models
           </p></li>
+        <li><strong>Outstanding Tutor Award</strong>
+        <p class="desc">
+          Statistics for Economics Tutor, Professor-Tutor-Student Linked Portfolio Program<br>
+          Center for Teaching and Learning, Kyung Hee University
+        </p>
+        </li>
       </ul>
     </section>
     <section id="Program" data-aos="fade-up">
@@ -232,6 +242,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
