--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@ renderPubs();
       <ul>
         <li><strong><a href="https://www.math.snu.ac.kr/bbs/board.php?bo_table=Math_Grad_Board&wr_id=141&sca=%EC%9A%B0%EC%88%98TA&year=2026&month=1&day=13" target="_blank">Excellent TA Award</a></strong> at Seoul National University (Feb 2021)<br>
         <p class="desc">
-            Calculus Practice 2 (Sep 2020 - Feb 2021)
+            Calculus Practice 2 (Sep 2020 - Feb 2021)<br>
+            Faculty of Liberal Education, Seoul National University
           </p></li>
         <li><strong>Bronze Award</strong>, <a href="https://www.kms.or.kr/board/list.html?num=14240&start=0&sort=top%20desc,%20reg_dt%20desc&code=conf13&tcode=&key=&keyword=" target="_blank">Korean Mathematical Society Undergraduate Mathematics Competition</a> (2019)</li>
         <li><strong>Honorable Mention</strong> (one of five teams), <a href="https://www.dbifc.co.kr/awards/2018" target="_blank">DB Insurance & Finance Contest</a> (2018)<br>
@@ -211,7 +212,7 @@ renderPubs();
           </p></li>
         <li><strong>Outstanding Tutor Award</strong>
         <p class="desc">
-          Statistics for Economics Tutor, Professor-Tutor-Student Linked Portfolio Program<br>
+          Statistics for Economics (Sep 2017 - Feb 2018), Professor-Tutor-Student Linked Portfolio Program<br>
           Center for Teaching and Learning, Kyung Hee University
         </p>
         </li>
@@ -242,6 +243,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
