--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ renderPubs();
             Awarded KRW 1.5 million and selected for <a href="https://www.dbifc.co.kr/tour/asia_8th"target="_blank">an Asian Global Finance Study Tour (Hong Kong)</a><br>
             Project: Evaluating Excess Returns of P2P Bonds: CDS Premium Estimation for Amortizing Bonds Using Default Probability Models
           </p></li>
-        <li><strong>Outstanding Tutor Award</strong>
+        <li><strong>Outstanding Tutor Award</strong> at Kyung Hee University (Jan 2018)
         <p class="desc">
           Statistics for Economics (Sep 2017 - Feb 2018), Professor-Tutor-Student Linked Portfolio Program<br>
           Center for Teaching and Learning, Kyung Hee University
@@ -243,6 +243,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
