--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ renderPubs();
     <section id="Experience" data-aos="fade-up">
       <h2>Experience</h2>
       <ul>
-        <li><strong>General Assistant at the Department of Mathematical Sciences at SNU</strong><br>
+        <li><strong>General Assistant</strong> at Seoul National University<br>
           <p class="desc">
             Manager TA, Department of Mathematical Sciences, Seoul National University (Mar 2022 - Feb 2023)<br>
             TA office, Department of Mathematical Sciences, Seoul National University (Apr 2021 - Feb 2022) 
@@ -243,6 +243,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
