--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="about" data-aos="fade-up">
       <h2>About</h2>
       <p>Hello! I'm a Ph.D student at the Department of Mathematical Sciences in Seoul National University.</p>
-      <p>I am broadly interested in mathematical finance and stochastic processes.</p>
+      <p>I am broadly interested in mathematical finance and stochastic processes, with a recent focus on interest rate modeling and term structure.</p>
       <p></p>
       <p><b>[E-mail]</b> cheolmin.shin@snu.ac.kr</p>
     </section>
@@ -243,6 +243,7 @@ renderPubs();
   <script>AOS.init({ once:true, duration:700 });</script>
 </body>
 </html>
+
 
 
 
